--- a/src/app/pages/questions/question/question.component.html
+++ b/src/app/pages/questions/question/question.component.html
@@ -2,12 +2,12 @@
   <p class="question-text">{{ questionItem.question_text }}</p>
 
   <ul class="answer-list-container">
-    @for (item of answer_list; track item.id_answer) { @if
-    (item.question.id_question == questionItem.id_question) {
+    @for (item of answer_list; track item.id_answer) {
     <app-answer
       [answerItem]="item"
       (answerSelected)="getAnswerSelected($event)"
+      [indexNumber]="findAnswerIndex(answer_list, item)"
     />
-    } }
+    }
   </ul>
 </div>
