--- a/src/app/pages/admin/user-answer/user-answer.component.html
+++ b/src/app/pages/admin/user-answer/user-answer.component.html
@@ -21,7 +21,7 @@
       class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
     >
       <td class="px-6 py-4">{{ item.id_useranswer }}</td>
-      <td class="px-6 py-4">{{ item.user.user_name }}</td>
+      <td class="px-6 py-4">{{ item.userProfile.user_name }}</td>
       <td class="px-6 py-4">{{ item.answer[0].answer_text }}</td>
 
       <td class="flex items-center px-6 py-4">
