--- a/src/app/pages/admin/user-result/user-result.component.html
+++ b/src/app/pages/admin/user-result/user-result.component.html
@@ -23,9 +23,11 @@
       class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
     >
       <td class="px-6 py-4">{{ item.id_userresult }}</td>
-      <td class="px-6 py-4">{{ item.user.user_name }}</td>
-      <td class="px-6 py-4">{{ item.person_type.person_type_name }}</td>
-      <td class="px-6 py-4">{{ item.result_percentage }}</td>
+      <td class="px-6 py-4">{{ item.userProfile.user_name }}</td>
+      <td class="px-6 py-4">{{ item.personType.person_type_description }}</td>
+      <td class="px-6 py-4">{{ item.result_developer }}</td>
+      <td class="px-6 py-4">{{ item.result_executor }}</td>
+      <td class="px-6 py-4">{{ item.result_manager }}</td>
       <td class="px-6 py-4">{{ item.person_type_description }}</td>
 
       <td class="flex items-center px-6 py-4">
