--- a/src/app/pages/questions/question/answer/answer.component.css
+++ b/src/app/pages/questions/question/answer/answer.component.css
@@ -1,7 +1,35 @@
+.answer-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 0;
+  width: 274px;
+  height: 220px;
+
+  .answer-icon {
+    position: absolute;
+    top: -14px;
+    right: 95px;
+    z-index: 1;
+  }
+
+  p {
+    color: #000;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    position: absolute;
+    top: 20px;
+    right: 40%;
+  }
+}
+
 .answer-item {
   display: flex;
-  width: 274px;
+  width: 272px;
   height: 191px;
+  margin-top: 26px;
   padding: 43px 15px 43px 14px;
   cursor: pointer;
   font-size: 18px;
@@ -14,9 +42,9 @@
   );
   box-shadow: 0px 26px 30px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(30px);
+}
 
-  &:hover {
-    border: 2px solid #585ef3;
-    box-shadow: 0px 20px 20px 0px rgba(88, 94, 243, 0.5);
-  }
+.answer-item.selected {
+  border: 2px solid #585ef3;
+  box-shadow: 0px 20px 20px 0px rgba(88, 94, 243, 0.5);
 }
