--- a/src/app/pages/questions/questions.component.html
+++ b/src/app/pages/questions/questions.component.html
@@ -1,18 +1,26 @@
+<ol class="pagination-list">
+  @for (item of paginationList; track item) {
+  <app-pagination
+    [currentPage]="item"
+    (changePageEvent)="changePage($event)"
+    (click)="item.checked = !item.checked"
+  />
+  @if (item.id !== 4) {
+  <div class="pagination-line"></div>
+  } }
+</ol>
+
 <div class="flex flex-col text-center gap-y-5">
-  @for (item of questionList; track item.id_question) {
+  @for (item of paginatedQuestions; track item.id_question) {
   <app-question
     [questionItem]="item"
-    [answer_list]="answer_list"
+    [answer_list]="item.answer"
     (answerSelected)="addValueToAsnwer($event)"
   />
-  }
-
-  <button routerLink="/admin" class="rounded-md mx-auto border-[1px] p-1.5">
-    Ver tablas
+  } @if (answersList.length === 12) {
+  <button (click)="showResults()" class="rounded-md mx-auto border-[1px] p-1.5">
+    Ver Resultados
   </button>
-  <h1>Resultados:</h1>
-  @if (answersList.length >= questionList.length) {
-  <app-results [answersList]="answersList" />
   }
 </div>
 
