--- a/src/app/pages/questions/question/answer/answer.component.css
+++ b/src/app/pages/questions/question/answer/answer.component.css
@@ -11,6 +11,7 @@
     top: -14px;
     right: 95px;
     z-index: 1;
+    cursor: pointer;
   }
 
   p {
@@ -42,6 +43,10 @@
   );
   box-shadow: 0px 26px 30px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(30px);
+
+  label {
+    cursor: pointer;
+  }
 }
 
 .answer-item.selected {
