--- a/src/app/pages/questions/questions.component.css
+++ b/src/app/pages/questions/questions.component.css
@@ -17,3 +17,43 @@
   background: #dce3ed;
   margin-bottom: 15px;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 80px;
+  margin-block: 69px;
+  margin-inline: auto;
+}
+
+.back-button,
+.next-button {
+  display: flex;
+  width: 216px;
+  padding: 13px 56px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.87);
+  box-shadow: 0px 14px 20px 0px rgba(42, 51, 83, 0.8);
+  color: #fff;
+  text-align: center;
+  font-family: "ruberoid-regular";
+}
+
+.back-button {
+  background: linear-gradient(
+    102deg,
+    #b3b9cd 13.93%,
+    rgba(20, 20, 28, 0.93) 82.33%
+  );
+  box-shadow: 0px 14px 20px 0px rgba(42, 51, 83, 0.8);
+}
+
+.next-button {
+  background: var(
+    --degrade,
+    linear-gradient(102deg, #9da1ff 13.93%, #585ef3 85.84%)
+  );
+}
