update: updating first deliverable

--- a/src/app/pages/questions/results/results.component.html
+++ b/src/app/pages/questions/results/results.component.html
@@ -91,7 +91,9 @@
       />
       <div class="social-media-container">
         <img src="../../../../assets/images/aecode-footer-img.svg" alt="" />
-        <img src="../../../../assets/images/coming-soon-footer.svg" alt="" />
+        <a href="https://aecode.ai/" target="_blank"
+          ><img src="../../../../assets/images/coming-soon-footer.svg" alt=""
+        /></a>
       </div>
       <div class="social-media-elements">
         <span>COMPARTE TUS RESULTADOS</span>
