--- a/src/app/pages/questions/questions.component.css
+++ b/src/app/pages/questions/questions.component.css
@@ -1,3 +1,9 @@
+.questions-container {
+  width: 100%;
+  background-image: url("/assets/images/questions-bg-img.png");
+  background-size: cover;
+}
+
 .pagination-list {
   width: 1010px;
   height: 80px;
