--- a/src/app/pages/questions/questions.component.html
+++ b/src/app/pages/questions/questions.component.html
@@ -1,34 +1,39 @@
-<ol class="pagination-list">
-  @for (item of paginationList; track item) {
-  <app-pagination
-    [currentPage]="item"
-    (changePageEvent)="changePage(1)"
-    (click)="item.checked = !item.checked"
-  />
-  @if (item.id !== 4) {
-  <div class="pagination-line"></div>
-  } }
-</ol>
+<div class="questions-container">
+  <ol class="pagination-list">
+    @for (item of paginationList; track item) {
+    <app-pagination
+      [currentPage]="item"
+      (changePageEvent)="changePage($event)"
+      (click)="item.checked = !item.checked"
+    />
+    @if (item.id !== 4) {
+    <div class="pagination-line"></div>
+    } }
+  </ol>
 
-<div class="flex flex-col text-center gap-y-5 pb-32">
-  @for (item of paginatedQuestions; track item.id_question) {
-  <app-question
-    [questionItem]="item"
-    [answer_list]="item.answer"
-    (answerSelected)="addValueToAsnwer($event)"
-  />
-  }
+  <div class="flex flex-col text-center gap-y-5 pb-28">
+    @for (item of paginatedQuestions; track item.id_question) {
+    <app-question
+      [questionItem]="item"
+      [answer_list]="item.answer"
+      (answerSelected)="addValueToAsnwer($event)"
+    />
+    }
 
-  <!-- <div class="buttons">
-    <button class="back-button">Volver</button>
-    <button class="next-button">Siguiente</button>
+    <!-- <div class="buttons">
+      <button (click)="backPage()" class="back-button">Volver</button>
+      <button (click)="nextPage()" class="next-button">Siguiente</button>
+    </div> -->
+
+    @if (answersList.length === 12) {
+    <button
+      (click)="showResults()"
+      class="rounded-md mx-auto border-[1px] p-1.5"
+    >
+      Ver Resultados
+    </button>
+    }
   </div>
-
-  @if (answersList.length === 12) {
-  <button (click)="showResults()" class="rounded-md mx-auto border-[1px] p-1.5">
-    Ver Resultados
-  </button>
-  } -->
 </div>
 
 <router-outlet />
