--- a/src/app/pages/questions/results/results.component.css
+++ b/src/app/pages/questions/results/results.component.css
@@ -1,5 +1,8 @@
 .result-container {
-  padding: 37px;
+  width: 100%;
+  background-image: url("/assets/images/results-bg-img.png");
+  background-size: cover;
+  padding: 36px 39px 70px 39px;
 }
 
 .result-modal {
@@ -297,7 +300,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 1394px;
+  width: 1390px;
   height: 123px;
   padding: 25px 40px;
   border-radius: 10px;
@@ -327,8 +330,12 @@
     width: 175px;
   }
 
+  a {
+    width: 231px;
+  }
+
   img:last-child {
-    width: 231;
+    width: 231px;
   }
 }
 
