--- a/src/app/pages/start-view/start-view.component.html
+++ b/src/app/pages/start-view/start-view.component.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="form-control">
-          <label for="user_name">Nombre completo</label>
+          <label for="user_name">Nombre </label>
           <input
             type="text"
             id="user_name"
