update: placeholder udpate

--- a/src/app/pages/start-view/start-view.component.html
+++ b/src/app/pages/start-view/start-view.component.html
@@ -28,7 +28,7 @@
             type="text"
             id="user_name"
             formControlName="user_name"
-            placeholder="Ingresar tu Nombre completo"
+            placeholder="Ingresar tu Nombre "
           />
         </div>
 
