--- a/src/app/pages/start-view/tip-container/tip-container.component.css
+++ b/src/app/pages/start-view/tip-container/tip-container.component.css
@@ -1,34 +1,54 @@
 .tip-container {
   display: flex;
   flex-direction: row;
-  gap: 23px;
+  margin-inline: auto;
+  gap: 20px;
 }
 
 .title-container {
-  width: 141px;
-  height: 147px;
+  width: 114px;
   padding-block: 19px;
   padding-inline: 14px;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 26px;
   background-color: black;
   font-family: "ruberoid-regular";
-
   color: white;
   border-radius: 6px;
 }
 
 .description-container {
-  width: 367px;
-  height: 146px;
-  padding-block: 35px;
-  padding-inline-start: 65px;
-  padding-inline-end: 38px;
+  max-width: 367px;
+  padding-block: 31px;
+  padding-inline: 35px;
+  margin-inline: auto;
   border-radius: 6px;
   background: white;
   color: rgba(0, 0, 0, 0.6);
-  font-size: 18px;
+  font-size: 16px;
   box-shadow: 0px 6px 10px -5px #56588c;
   font-family: "plusjakartasans-regular";
+}
+
+@media (max-width: 1300px) {
+  .title-container {
+    margin-inline: auto;
+    font-size: 12px;
+  }
+
+  .tip-container {
+    flex-direction: column;
+
+    > :nth-child(2) {
+      margin-inline: auto;
+      transform: rotate(90deg);
+    }
+  }
+
+  .description-container {
+    font-size: 10px;
+    max-width: 100%;
+    padding: 11px;
+  }
 }
