--- a/src/app/pages/start-view/tip-container/tip-container.component.css
+++ b/src/app/pages/start-view/tip-container/tip-container.component.css
@@ -1,4 +1,5 @@
 .tip-container {
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   margin-inline: auto;
@@ -33,6 +34,7 @@
 
 @media (max-width: 1300px) {
   .title-container {
+    width: 100%;
     margin-inline: auto;
     font-size: 12px;
   }
