update: images per bot result

--- a/src/app/pages/questions/results/results.component.html
+++ b/src/app/pages/questions/results/results.component.html
@@ -35,7 +35,28 @@
         </div>
 
         <div class="img-result">
-          <img src="../../../assets/images/result-img.svg" alt="" />
+          @switch (userResults.personType.id_person_type) { @case (1) {
+
+          <img src="../../../../assets/images/result-bots/1.png" alt="" />
+          } @case (2) {
+
+          <img src="../../../../assets/images/result-bots/2.svg" alt="" />
+          } @case (3) {
+
+          <img src="../../../../assets/images/result-bots/3.png" alt="" />
+          } @case (4) {
+
+          <img src="../../../../assets/images/result-bots/4.png" alt="" />
+          } @case (5) {
+
+          <img src="../../../../assets/images/result-bots/5.png" alt="" />
+          } @case (6) {
+
+          <img src="../../../../assets/images/result-bots/6.png" alt="" />
+          } @case (7) {
+
+          <img src="../../../../assets/images/result-bots/7.png" alt="" />
+          } }
         </div>
       </div>
 
