update: 2nd image

--- a/src/app/pages/questions/results/results.component.html
+++ b/src/app/pages/questions/results/results.component.html
@@ -42,7 +42,7 @@
           />
           } @case (2) {
           <img
-            src="https://github.com/Sthepen-EA/Media-files/blob/main/aecode-1-landing-page/Bot-images/3.png?raw=true"
+            src="https://github.com/Sthepen-EA/Media-files/blob/main/aecode-1-landing-page/Bot-images/2.svg?raw=true"
             alt="{{ userResults.personType.person_type_name }}"
           />
           } @case (3) {
