--- a/src/app/pages/questions/question/answer/answer.component.css
+++ b/src/app/pages/questions/question/answer/answer.component.css
@@ -53,3 +53,35 @@
   border: 2px solid #585ef3;
   box-shadow: 0px 20px 20px 0px rgba(88, 94, 243, 0.5);
 }
+
+@media (max-width: 1300px) {
+  .answer-container {
+    width: 100%;
+    height: auto;
+    position: relative;
+
+    .answer-icon {
+      top: 0;
+      left: -32px;
+    }
+
+    p {
+      width: fit-content;
+      font-size: 12px;
+      top: 18px;
+      left: 27px;
+    }
+  }
+
+  label {
+    font-size: 10px;
+  }
+
+  .answer-item {
+    width: 100%;
+    height: fit-content;
+    padding: 10px 19px 10px 26px;
+    margin-top: 0px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  }
+}
