--- a/src/app/pages/questions/results/results.component.html
+++ b/src/app/pages/questions/results/results.component.html
@@ -78,7 +78,7 @@
         <div class="skills-result-container">
           <div class="skill-item first-skill">
             <div class="skill-percentage-container">
-              <app-icon-result class="mx-auto" />
+              <app-icon-result class="mx-auto max-lg:size-[80px]" />
               <span class="skill-percentage">
                 {{ userResults.result_developer }}%</span
               >
@@ -89,7 +89,7 @@
 
           <div class="skill-item second-skill">
             <div class="skill-percentage-container">
-              <app-icon-result class="mx-auto" />
+              <app-icon-result class="mx-auto max-lg:size-[80px]" />
               <span class="skill-percentage">
                 {{ userResults.result_manager }}%</span
               >
@@ -100,7 +100,7 @@
 
           <div class="skill-item third-skill">
             <div class="skill-percentage-container">
-              <app-icon-result class="mx-auto" />
+              <app-icon-result class="mx-auto max-lg:size-[80px]" />
               <span class="skill-percentage">
                 {{ userResults.result_executor }}%</span
               >
