--- a/src/app/pages/questions/results/results.component.css
+++ b/src/app/pages/questions/results/results.component.css
@@ -267,7 +267,7 @@
 .result-description {
   display: flex;
   max-width: 630px;
-  height: auto;
+  height: 230px;
   padding: 20px 16px;
   align-items: center;
   gap: 24px;
@@ -432,7 +432,7 @@
       display: flex;
       justify-content: center;
       width: auto;
-      max-height: 250px;
+      height: 250px;
       padding: 20px 16px;
       align-items: center;
       gap: 24px;
@@ -440,6 +440,10 @@
       border: 2px solid #fff;
       box-shadow: 0px 0px 13.1px 0px rgba(0, 0, 0, 0.25);
       backdrop-filter: blur(25px);
+
+      img {
+        max-height: 250px;
+      }
     }
   }
 
@@ -457,7 +461,7 @@
 
       .skill-percentage {
         top: 33%;
-        right: 27%;
+        right: 26%;
         font-size: 16px;
       }
     }
