--- a/src/app/pages/questions/results/results.component.html
+++ b/src/app/pages/questions/results/results.component.html
@@ -35,42 +35,10 @@
         </div>
 
         <div class="img-result">
-          @switch (userResults.personType.id_person_type) { @case (1) {
           <img
-            src="https://github.com/Sthepen-EA/Media-files/blob/main/aecode-1-landing-page/Bot-images/1.png?raw=true"
+            src="{{ path_image }}"
             alt="{{ userResults.personType.person_type_name }}"
           />
-          } @case (2) {
-          <img
-            src="https://github.com/Sthepen-EA/Media-files/blob/main/aecode-1-landing-page/Bot-images/2.svg?raw=true"
-            alt="{{ userResults.personType.person_type_name }}"
-          />
-          } @case (3) {
-          <img
-            src="https://github.com/Sthepen-EA/Media-files/blob/main/aecode-1-landing-page/Bot-images/3.png?raw=true"
-            alt="{{ userResults.personType.person_type_name }}"
-          />
-          } @case (4) {
-          <img
-            src="https://github.com/Sthepen-EA/Media-files/blob/main/aecode-1-landing-page/Bot-images/4.png?raw=true"
-            alt="{{ userResults.personType.person_type_name }}"
-          />
-          } @case (5) {
-          <img
-            src="https://github.com/Sthepen-EA/Media-files/blob/main/aecode-1-landing-page/Bot-images/5.png?raw=true"
-            alt="{{ userResults.personType.person_type_name }}"
-          />
-          } @case (6) {
-          <img
-            src="https://github.com/Sthepen-EA/Media-files/blob/main/aecode-1-landing-page/Bot-images/6.png?raw=true"
-            alt="{{ userResults.personType.person_type_name }}"
-          />
-          } @case (7) {
-          <img
-            src="https://github.com/Sthepen-EA/Media-files/blob/main/aecode-1-landing-page/Bot-images/7.png?raw=true"
-            alt="{{ userResults.personType.person_type_name }}"
-          />
-          } }
         </div>
       </div>
 
