update: first view responsive updated

--- a/src/app/pages/start-view/start-view.component.html
+++ b/src/app/pages/start-view/start-view.component.html
@@ -67,7 +67,7 @@
         <span>Empezar a jugar</span>
       </div>
       <div (click)="onSubmit()" class="send-icon-container">
-        <app-send-icon class="send-icon" />
+        <app-send-icon class="max-lg:size-[17.7px]" />
       </div>
     </div>
   </div>
