--- a/src/app/pages/start-view/start-view.component.css
+++ b/src/app/pages/start-view/start-view.component.css
@@ -86,6 +86,7 @@
       text-align: center;
       font-family: "Ruberoid-regular";
       font-size: 16px;
+      font-weight: 500;
     }
   }
 
@@ -158,17 +159,28 @@
 
 /* Media query for smaller screens */
 @media (max-width: 1300px) {
+  .start-view-container {
+    padding: 0;
+  }
+
+  .start-view-model {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    padding: 36px 15px 69px 15px;
+  }
+
   .aecobot {
+    padding: 0;
     font-size: 18px;
-    height: 58px;
+    width: 118px;
+    height: 38px;
   }
 
   .title {
     font-size: 22px;
-  }
-
-  .start-view-container {
-    padding: 29px 17px;
+    line-height: 26px;
+    margin-block: 22px;
   }
 
   .tips-container {
@@ -178,7 +190,8 @@
 
   .tips-form-container {
     flex-direction: column;
-    padding-inline: 15px;
+    gap: 13px;
+    padding: 0;
   }
 
   .user-form-container {
@@ -187,7 +200,13 @@
   }
 
   .sendbar {
-    margin-top: 22px;
-    margin-inline: 15px;
+    margin-top: 12px;
+    margin-inline: 0;
+    height: 51px;
+
+    .send-icon-container {
+      width: 36px;
+      height: 36px;
+    }
   }
 }
