--- a/src/app/pages/start-view/tip-container/tip-container.component.css
+++ b/src/app/pages/start-view/tip-container/tip-container.component.css
@@ -30,6 +30,7 @@
   font-size: 16px;
   box-shadow: 0px 6px 10px -5px #56588c;
   font-family: "plusjakartasans-regular";
+  text-wrap: pretty;
 }
 
 @media (max-width: 1300px) {
@@ -47,7 +48,6 @@
 
     span {
       margin-inline: auto;
-      line-height: 26px;
     }
   }
 
@@ -62,8 +62,10 @@
   }
 
   .description-container {
+    text-align: center;
     font-size: 10px;
     max-width: 100%;
+    min-height: 110px;
     padding: 11px;
   }
 }
