--- a/src/app/pages/questions/questions.component.html
+++ b/src/app/pages/questions/questions.component.html
@@ -11,27 +11,14 @@
     } }
   </ol>
 
-  <div class="flex flex-col text-center gap-y-5 pb-28">
+  <div class="questions-list flex flex-col text-center gap-y-5 pb-28">
     @for (item of paginatedQuestions; track item.id_question) {
     <app-question
+      [firstQuestion]="firstQuestion"
       [questionItem]="item"
       [answer_list]="item.answer"
       (answerSelected)="addValueToAsnwer($event)"
     />
-    }
-
-    <!-- <div class="buttons">
-      <button (click)="backPage()" class="back-button">Volver</button>
-      <button (click)="nextPage()" class="next-button">Siguiente</button>
-    </div> -->
-
-    @if (answersList.length === 12) {
-    <button
-      (click)="showResults()"
-      class="rounded-md mx-auto border-[1px] p-1.5"
-    >
-      Ver Resultados
-    </button>
     }
   </div>
 </div>
