--- a/src/app/pages/questions/results/results.component.html
+++ b/src/app/pages/questions/results/results.component.html
@@ -2,7 +2,8 @@
   <div class="result-modal">
     <h1 class="title-result">
       <span class="user-name"
-        >¡HOLA!, {{ userResults.userProfile.user_name }}
+        ><span class="user-hi">¡HOLA!</span>,
+        {{ userResults.userProfile.user_name }}
       </span>
       <span>TU PREDICCION SEGUN LA IA</span>
     </h1>
@@ -46,7 +47,7 @@
         <div class="skills-result-container">
           <div class="skill-item first-skill">
             <div class="skill-percentage-container">
-              <app-icon-result class="mx-auto max-lg:size-[80px]" />
+              <app-icon-result class="icon-result mx-auto max-lg:size-[80px]" />
               <span class="skill-percentage">
                 {{ userResults.result_developer }}%</span
               >
@@ -57,7 +58,7 @@
 
           <div class="skill-item second-skill">
             <div class="skill-percentage-container">
-              <app-icon-result class="mx-auto max-lg:size-[80px]" />
+              <app-icon-result class="icon-result mx-auto max-lg:size-[80px]" />
               <span class="skill-percentage">
                 {{ userResults.result_manager }}%</span
               >
@@ -68,7 +69,7 @@
 
           <div class="skill-item third-skill">
             <div class="skill-percentage-container">
-              <app-icon-result class="mx-auto max-lg:size-[80px]" />
+              <app-icon-result class="icon-result mx-auto max-lg:size-[80px]" />
               <span class="skill-percentage">
                 {{ userResults.result_executor }}%</span
               >
@@ -89,15 +90,15 @@
       <img
         src="../../../../assets/images/try-again-img.svg"
         alt=""
-        class="try-again-img"
+        class="try-again-img max-lg:hidden"
         (click)="tryAgain()"
       />
-      <div class="social-media-container">
-        <img src="../../../../assets/images/aecode-footer-img.svg" alt="" />
-        <a href="https://aecode.ai/" target="_blank"
-          ><img src="../../../../assets/images/coming-soon-footer.svg" alt=""
-        /></a>
-      </div>
+      <img
+        src="../../../../assets/images/try-again-img-light.svg"
+        alt=""
+        class="try-again-img lg:hidden"
+        (click)="tryAgain()"
+      />
       <div class="social-media-elements">
         <span>COMPARTE TUS RESULTADOS</span>
         <div class="social-media-elements-list">
@@ -109,6 +110,23 @@
           </div>
           }
         </div>
+      </div>
+
+      <div class="social-media-container">
+        <img
+          src="../../../../assets/images/aecode-footer-img.svg"
+          class="max-lg:hidden"
+          alt=""
+        />
+        <img
+          src="../../../../assets/images/footer-img-light.svg"
+          class="second-img lg:hidden"
+          alt=""
+        />
+
+        <a href="https://aecode.ai/" target="_blank"
+          ><img src="../../../../assets/images/coming-soon-footer.svg" alt="" />
+        </a>
       </div>
     </footer>
   </div>
