update: final description changed

--- a/src/app/pages/questions/results/results.component.html
+++ b/src/app/pages/questions/results/results.component.html
@@ -80,7 +80,7 @@
         </div>
         <div class="result-description">
           <p>
-            {{ description }}
+            {{ userResults.person_type_description }}
           </p>
         </div>
       </div>
